--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@
   .input {
     @apply w-full dark:bg-dark_bg_2 p-1.5 dark:text-dark_text_1 rounded-lg flex-1 outline-none;
   }
+
+  .convos {
+    height: calc(100vh - 220px);
+    overflow-y: auto;
+  }
 }
 
 /* animations  */
@@ -37,4 +42,16 @@
   0% {
     transform: rotate(-90deg);
   }
+}
+
+
+/* custom scrollbar  */
+.scrollbar::-webkit-scrollbar{
+  width: 5px;
+}
+.scrollbar::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+.scrollbar::-webkit-scrollbar-thumb{
+  background-color: #444e54;
 }
