--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
   .convos {
     height: calc(100vh - 220px);
     overflow-y: auto;
+    overflow-x: hidden;
   }
 }
 
@@ -44,14 +45,13 @@
   }
 }
 
-
 /* custom scrollbar  */
-.scrollbar::-webkit-scrollbar{
+.scrollbar::-webkit-scrollbar {
   width: 5px;
 }
-.scrollbar::-webkit-scrollbar-track{
+.scrollbar::-webkit-scrollbar-track {
   background-color: transparent;
 }
-.scrollbar::-webkit-scrollbar-thumb{
+.scrollbar::-webkit-scrollbar-thumb {
   background-color: #444e54;
 }
