--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,12 @@
     overflow-y: auto;
     overflow-x: hidden;
   }
+
+  .overflow_scrollbar {
+    height: calc(100vh - 110px);
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
 
 /* animations  */
